--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -45,7 +45,7 @@
       height: 200px;
     }
     &.drag-over {
-      border: 2px solid rgba(0, 126, 229, 0.5);
+      border: 2px solid #EF233C;
       background: #fff;
     }
     &.dropped {
