--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -19,7 +19,7 @@
   padding: 0.2rem; 
   cursor: pointer;
   &:focus {
-    outline: 1px solid #D90429;
+    outline: 1px dotted #646675;
     outline-offset: 2px;
   }
 }
