--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -1,4 +1,4 @@
-  .popup {
+.popup {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +16,7 @@
       bottom: -0.5rem;
       width: 100%;
       height: 1px;
-      background: #EDF2F4;
+      background: #edf2f4;
       left: 0;
     }
     .popup-title {
@@ -27,12 +27,11 @@
       text-align: left;
       padding: 0.5rem 0.5rem;
       font-size: 1rem;
-      color: #2B2D42;
+      color: #2b2d42;
     }
   }
 
   .popup-container {
-    /* padding: 1rem 1rem 0.5rem 1rem; */
     padding: 0.75rem;
     display: flex;
     align-items: center;
@@ -48,7 +47,7 @@
       position: absolute;
       width: 0.2rem;
       height: 3.65rem;
-      background: #EF233C;
+      background: #ef233c;
       left: 0;
       top: 0;
     }
@@ -73,5 +72,21 @@
   }
   .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
+  }
+
+  .close-modal {
+    position: absolute;
+    right: 0.2rem;
+    top: 0.5rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+    outline: none;
+  }
+  .img-close {
+    width: 2.25rem;
+    height: 2.25rem;
   }
 }
