--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -42,8 +42,7 @@
   }
 }
 .create-folder-controls {
-  padding: 0.25rem 0;
-  margin: 2rem 0 0.25rem 0;
+  padding: 5rem 0 0 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
