--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 0.5rem 0rem;
   width: 100%;
 
   label {
