--- a/ui/src/views/dashboard.scss
+++ b/ui/src/views/dashboard.scss
@@ -32,7 +32,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: rgba($color: #000000, $alpha: 0.1);
+  // background: rgba($color: #000000, $alpha: 0.1);
 
 }
 .explorer-controls {
