--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,23 +1,21 @@
 .explorer-container {
   display: grid;
-  grid-template-columns: 30% 70%;
+  // grid-template-columns: 30% 70%;
   grid-column-gap: 1rem;
   align-items: start;
   padding: 1rem;
-  @media only screen and (min-width: 1824px) {
+  @media (min-width: 1281px) {
     grid-column-gap: 1rem;
-    grid-template-columns: 15% 84%;
+    grid-template-columns: 1fr 5fr;
   }
-  @media only screen and (min-width: 1224px) {
-    grid-template-columns: 15% 85%;
+  @media (min-width: 1025px) and (max-width: 1280px) {
     grid-column-gap: 1rem;
+    grid-template-columns: 1fr 2fr;
   }
   @media (min-width: 768px) and (max-width: 1024px) {
-    grid-template-columns: 25% 30%;
-    grid-column-gap: 1rem;
   }
   @media only screen and (max-width: 992px) {
-    grid-template-columns: 36% 64%;
+    grid-template-columns: 100%;
   }
   @media only screen and (max-width: 768px) {
     grid-template-columns: 100%;
@@ -46,13 +44,10 @@
 .explorer {
   background: #fff;
   border-radius: 5px;
-  // border: 3px solid #EDF2F4;
-  // border: 1px solid #2B2D42;
   width: 100%;
   position: relative;
   .line-item-wrapper {
     &:nth-child(odd) {
-      // background: rgba(0, 0, 0, 0.02);
       background: rgba(237, 242, 244, 0.5);
     }
   }
@@ -143,7 +138,6 @@ header.explorer-header {
   border-radius: 5px;
 }
 .tree-view-wrapper {
-  // border: 1px solid #515364;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -151,6 +145,18 @@ header.explorer-header {
   justify-content: center;
   overflow-x: auto;
   background: #fff;
+  @media (min-width: 768px) and (max-width: 1024px) {
+    display: none;
+  }
+  @media only screen and (max-width: 768px) {
+    display: none;
+  }
+  @media only screen and (max-width: 480px) {
+    display: none;
+  }
+  @media only screen and (max-width: 320px) {
+    display: none;
+  }
   .tree-view-header {
     font-weight: 500;
     font-size: 1rem;
@@ -202,7 +208,7 @@ header.explorer-header {
 .list-fade-enter-active,
 .list-fade-leave-active {
   opacity: 1;
-  transition: all 0.3s;
+  transition: opacity 0.3s;
 }
 .list-fade-enter,
 .list-fade-leave-to {
