--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -13,7 +13,7 @@
   }
   input[type="text"] {
     border-radius: 3px;
-    border: 1px solid #2B2D42;
+    border: 1px solid #8D99AE;
     padding: 0.5rem 0.4rem;
     width: 80%;
     outline: none;
