--- a/ui/src/components/Path/folderpath.scss
+++ b/ui/src/components/Path/folderpath.scss
@@ -26,7 +26,8 @@
   .path-item {
     text-transform: capitalize;
     font-size: 0.95rem;
-    font-weight: 700;
+    font-weight: 500;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     a {
       text-decoration: none;
       color: #007ee5;
