--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -9,7 +9,7 @@
     margin: 0.25rem 0 0.25rem 0.25rem;
   }
   .delete-alert {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 700;
     color: #cb2431;
   }
@@ -43,5 +43,13 @@
   img {
     max-height: 100%;
     max-width: 100%;
+  }
+  .delete-path {
+    background: #EDF2F4;
+    border: 1px solid rgba(141, 153, 174, 0.5);
+    padding: 0.25rem 0.5rem;
+    margin-top: 1rem;
+    display: block;
+    border-radius: 3px;
   }
 }
