--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -35,18 +35,19 @@ img {
 }
 .move-copy-selection {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 2rem 0;
 
   label {
-    padding: 0.75rem;
+    padding: 1rem 0.75rem;
     border-radius: 4px;
     height: 100%;
     flex: 1;
-    margin: 0 1rem;
+    margin: 0.5rem 0;
     cursor: pointer;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -59,15 +60,19 @@ img {
     }
 
     &.selected {
-      border: 2px solid #2B2D42;
-      color: #2B2D42;
-      background: #fff;
+      border: 1px solid #2B2D42;
+      color: #fff;
+      background: #8D99AE;
+    }
+    span {
+      margin-right: auto;
+      display: block;
     }
 
     i {
       width: 1.25rem;
       height: 1.25rem;
-      margin-right: 0.25rem;
+      margin-right: auto;
     }
   }
   input[type="radio"] {
