--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -8,7 +8,8 @@
       display: block;
       padding-left: 0.5rem;
       margin: 0.5rem 0;
-      font-weight: 700;
+      font-weight: 500;
+      font-size: 0.9rem;
     }
   }
 }
@@ -44,21 +45,27 @@ img {
   }
 }
 .selected-src {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin: 1rem 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0.25rem 0.75rem;
   .value {
     margin-top: 0.5rem;
     display: block;
-    width: 400px;
+    width: 95%;
     word-break: break-all;
     text-align: left;
-    min-height: 40px;
-    font-weight: 700;
-    color: #007ee5;
+    min-height: 26px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: #2B2D42;
+    background: #EDF2F4;
+    border: 1px solid rgba(141, 153, 174, 0.5);
+    border-radius: 3px;
+    padding: 0.1rem 0.5rem;
   }
 }
