--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -65,7 +65,8 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      background: linear-gradient(135deg, rgba(237,242,244,1) 0%, rgba(141,153,174,1) 100%);
+      // background: linear-gradient(135deg, rgba(/237,242,244,1) 0%, rgba(141,153,174,1) 100%);
+      background: linear-gradient(135deg, rgba(141,153,174,1) 0%, rgba(237,242,244,1) 100%);
       height: 100%;
       border-radius: 4px;
 
@@ -176,11 +177,16 @@ img {
   width: 100%;
   span {
     text-align: left;
-    width: 100%;
+    display: block;
+    width: 90%;
     display: inline-block;
     padding-left: 1rem;
     max-width: 400px;
     font-size: 0.9rem;
-    font-weight: 700;
+    font-weight: 500;
+    background: #EDF2F4;
+    border: 1px solid rgba(141, 153, 174, 0.5);
+    border-radius: 3px;
+    padding: 0.25rem 0.2rem;
   }
 }
