sync file explorer and explorer when resources are moved/copied/deleted

--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -46,10 +46,8 @@
   }
   .delete-path {
     background: #EDF2F4;
-    border: 1px solid rgba(141, 153, 174, 0.5);
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem;
     margin-top: 1rem;
-    display: block;
     border-radius: 3px;
   }
 }
