--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -56,7 +56,7 @@ img {
     border-radius: 4px;
     border: 1px solid #ddd;
     &:hover {
-      border: 1px solid #2B2D42;
+      border: 1px solid #8D99AE;
     }
 
     &.selected {
