--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -7,8 +7,9 @@
       text-align: left;
       display: block;
       padding-left: 0.5rem;
-      margin: 0.5rem 0;
-      font-weight: 700;
+      margin: 0.25rem 0;
+      font-weight: 500;
+      font-size: 0.9rem;
     }
   }
 }
@@ -16,7 +17,7 @@
   overflow: auto;
   border-radius: 3px;
   border: 1px solid #ddd;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
   height: 400px;
@@ -52,11 +53,10 @@ img {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    margin: 1rem 0;
+    margin: 0.25rem 0;
     span {
-      background: #EDF2F4;
-      border: 1px solid rgba(141, 153, 174, 0.5);
-      margin: 0.5rem;
+      // background: #EDF2F4;
+      // border: 1px solid rgba(5, 6, 7, 0.5);
       border-radius: 3px;
       color: #000;
       padding: 0.25rem 0.5rem;
