--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -22,6 +22,10 @@
     border-radius: 4px;
     position: relative;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    &::hover {
+      background: #8D99AE;
+    }
     @media (min-width: 1281px) {
       height: 200px;
     }
@@ -64,7 +68,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: row;
+      flex-direction: column;
       background: linear-gradient(135deg, rgba(141,153,174,1) 0%, rgba(237,242,244,1) 100%);
       border: 1px solid rgba(141, 153, 174, 0.25);
       height: 100%;
@@ -87,6 +91,8 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         border: none;
+        width: 90%;
+        padding: 0 0.25rem;
       }
       .file-size {
         font-size: 1rem;
@@ -116,6 +122,7 @@
   align-items: center;
   justify-content: flex-end;
   margin: 1rem 0;
+  padding-right: 1.5rem;
   button {
     &:last-child {
       margin-left: 1rem;
@@ -132,6 +139,8 @@ img {
   overflow: auto;
   border: 1px solid #ddd;
   border-radius: 4px;
+  padding-left: 0.75rem;
+  padding-top: 0.5rem;
 
   @media (min-width: 1281px) {
     height: 260px;
@@ -198,4 +207,14 @@ img {
   font-size: 0.9rem;
   width: 100%;
   text-align: left;
+}
+.ps {
+  font-style: italic;
+  font-size: 0.9rem;
+  display: block;
+  width: 100%;
+  margin: 0.25rem;
+  text-align: left;
+  padding-left: 0.5rem;
+  color: #8D99AE;
 }
