--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -139,19 +139,19 @@ img {
   overflow: auto;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding-left: 0.75rem;
+  padding-left: 0.5rem;
   padding-top: 0.5rem;
 
   @media (min-width: 1281px) {
-    height: 260px;
+    height: 200px;
   }
 
   @media (min-width: 1025px) and (max-width: 1280px) {
-    height: 260px;
+    height: 200px;
   }
 
   @media (min-width: 768px) and (max-width: 1024px) {
-    height: 250px;
+    height: 230px;
   }
 
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -180,23 +180,28 @@ img {
   width: 70%;
 }
 .upload-path-selection {
-  margin: 0.25rem 0;
+  margin: 0.5rem 0;
   padding: 0.25rem 0.1rem;
-  width: 100%;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   span {
     text-align: left;
     display: block;
-    width: 90%;
+    width: 100%;
     display: inline-block;
     padding-left: 1rem;
     max-width: 400px;
     font-size: 0.9rem;
     font-weight: 500;
-    background: #EDF2F4;
-    border: 1px solid rgba(141, 153, 174, 0.5);
     border-radius: 3px;
     padding: 0.25rem 0rem;
-    padding-left: 0.5rem;
+    padding-left: 0.1rem;
+    word-break: break-word;
+    &.highlight {
+      color: #0080FF;
+    }
   }
 }
 .upload-explorer-header {
