fixed footer enabled context upload

--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -154,7 +154,7 @@ header.explorer-header {
 .list-fade-enter-active,
 .list-fade-leave-active {
   opacity: 1;
-  transition: opacity 0.3s;
+  transition: all 0.3s;
 }
 .list-fade-enter,
 .list-fade-leave-to {
