server - added pm2 client - changed accent color (red) - changed rounded button style

--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -45,8 +45,8 @@
     &::before {
       content: "";
       position: absolute;
-      width: 0.2rem;
-      height: 3.65rem;
+      width: 1px;
+      height: 3.6rem;
       background: #ef233c;
       left: 0;
       top: 0;
