--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -13,7 +13,6 @@
   align-items: center;
   justify-content: center;
   .drop-zone {
-    height: 180px;
     width: 100%;
     // background: rgba(0, 126, 229, 0.3);
     background: #EDF2F4;
@@ -27,7 +26,7 @@
       background: #8D99AE;
     }
     @media (min-width: 1281px) {
-      height: 200px;
+      height: 220px;
     }
     
     @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -65,15 +64,14 @@
       right: 0;
       margin-left: auto;
       margin-right: auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
+      // flex-direction: column;
       background: linear-gradient(135deg, rgba(141,153,174,1) 0%, rgba(237,242,244,1) 100%);
       border: 1px solid rgba(141, 153, 174, 0.25);
       height: 100%;
       border-radius: 4px;
-      text-shadow: 1px 1px rgba(0,0,0,0.25);
       .icon-wrapper {
         width: 2rem;
         height: 2rem;
@@ -85,9 +83,9 @@
         }
       }
       .file-name {
-        font-size: 1.25rem;
-        color: #fff;
-        text-shadow: 1px 1px rgba(0,0,0,0.95);
+        font-size: 1rem;
+        color: #2B2D42;
+        text-shadow: 1px 1px rgba(0,0,0,0.15);
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
@@ -98,10 +96,6 @@
       .file-size {
         font-size: 1rem;
         font-weight: normal;
-      }
-      .success-msg {
-        margin-top: 1rem;
-        font-size: 1.25rem;
       }
     }
   }
@@ -150,26 +144,26 @@ img {
   padding-top: 0.5rem;
 
   @media (min-width: 1281px) {
-    height: 200px;
+    height: 170px;
   }
 
   @media (min-width: 1025px) and (max-width: 1280px) {
-    height: 200px;
+    height: 170px;
   }
 
   @media (min-width: 768px) and (max-width: 1024px) {
-    height: 230px;
+    height: 150px;
   }
 
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    height: 250px;
+    height: 150px;
   }
 
   @media (min-width: 481px) and (max-width: 767px) {
-    height: 180px;
+    height: 120px;
   }
   @media (min-width: 320px) and (max-width: 480px) {
-    height: 180px;
+    height: 120px;
   }
 }
 .clear-upload {
@@ -229,4 +223,35 @@ img {
   text-align: left;
   padding-left: 0.5rem;
   color: #8D99AE;
+}
+.dropzone-backdrop-icon {
+  width: 100%;
+  height: 40%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top: 8%;
+  position: absolute;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+.uploaded-file-attrs {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  bottom: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .upload-success-msg {
+    margin-top: 1rem;
+    font-size: 1rem;
+    color: #2B2D42;
+  }
 }
