--- a/ui/src/components/login.scss
+++ b/ui/src/components/login.scss
@@ -14,7 +14,7 @@ header.app-title {
   font-weight: 700;
   margin-bottom: 1rem;
   width: 100%;
-  background: #fff;
+  // background: #fff;
   color: #2B2D42;
   padding: 0.75rem 0;
   border-radius: 3px;
@@ -69,7 +69,7 @@ header.app-title {
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  width: 90%;
+  width: 70%;
 }
 .dropbox-btn {
   font-size: 1.2rem;
@@ -77,7 +77,7 @@ header.app-title {
   border: none;
   border-radius: 5px;
   padding: 0.75rem;
-  // background: #8D99AE;
+  background: #fff;
   color: #007EE5;
   font-weight: 700;
   cursor: pointer;
@@ -86,6 +86,7 @@ header.app-title {
   margin: 0.5rem 0;
   border: 1px solid transparent;
   outline: none;
+  box-shadow: 0 0 5px 1px rgba(0,0,0,0.1);
 
   &:hover {
     border: 1px solid #8D99AE;
