--- a/ui/src/views/dashboard.scss
+++ b/ui/src/views/dashboard.scss
@@ -33,7 +33,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  // background: rgba($color: #000000, $alpha: 0.1);
+  z-index: 999;
 
 }
 .explorer-controls {
