font style fixes misc css fixes

--- a/ui/src/components/ContextActions/context-control.scss
+++ b/ui/src/components/ContextActions/context-control.scss
@@ -11,8 +11,8 @@
     align-items: center;
     justify-content: flex-start;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    font-size: 0.95rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: normal;
     position: relative;
 
     &:hover {
