--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -8,6 +8,18 @@
     grid-column-gap: 1rem;
     grid-template-columns: 1fr 6fr;
   }
+  @media screen and (min-width: 1400px) {
+    grid-template-columns: 1fr 3fr;
+    // border: 1px solid red;
+  }
+  @media screen and (min-width: 1600px) {
+    grid-template-columns: 1fr 4fr;
+    // border: 1px solid blue;
+  }
+  @media screen and (min-width: 1900px) {
+    grid-template-columns: 1fr 6fr;
+    // border: 1px solid green;
+  }
   @media (min-width: 1025px) and (max-width: 1280px) {
     grid-column-gap: 1rem;
     grid-template-columns: 1fr 2fr;
