--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -22,6 +22,14 @@
     outline: 1px dotted #646675;
     outline-offset: 2px;
   }
+  i {
+    width: 1rem;
+    height: 1rem;
+    img {
+      max-height: 100%;
+      max-height: 100%;
+    }
+  }
 }
 .folderImg {
   width: 1.5rem;
