--- a/ui/src/components/Path/folderpath.scss
+++ b/ui/src/components/Path/folderpath.scss
@@ -9,8 +9,10 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     margin:0;
-    padding: 0.2rem 0.25rem;
-    border-radius: 20px;
+    padding: 0.3rem 0.25rem;
+    border-radius: 5px;
+    // background: #fff;
+    // box-shadow: 0 0 10px 1px rgba(100, 102, 117, 0.1);
   }
   .path-slash {
     margin: 0.2rem 0.25rem 0;
