--- a/ui/src/views/dashboard.scss
+++ b/ui/src/views/dashboard.scss
@@ -47,6 +47,7 @@
   align-self: center;
   width: 100%;
   padding: 2rem 0.75rem 1rem;
+  // background: rgba(43, 45, 66, 0.1);
 }
 
 .fade-enter-active,
