--- a/ui/src/components/Explorer/line-item-popdown.scss
+++ b/ui/src/components/Explorer/line-item-popdown.scss
@@ -18,7 +18,7 @@
     text-align: center;
 
     &:hover {
-      background: #EDF2F4;
+      background: rgba(139, 99, 114, 0.1);
       &::after {
         content: "";
         position: absolute;
@@ -26,7 +26,7 @@
         top: 0;
         width: 1px;
         height: 100%;
-        background: #D90429;
+        background: #8b6372;
       }
     }
     &:first-child {
