--- a/ui/src/components/Popdown/popdown.scss
+++ b/ui/src/components/Popdown/popdown.scss
@@ -15,22 +15,22 @@
   border: 1px solid #ddd;
 
   &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -9px;
-    right: 0;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 16px;
-    height: 16px;
-    background: #fff;
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    border-top-left-radius: 3px;
-    transform: rotate(45deg);
-    z-index: -1;
+    // content: "";
+    // display: block;
+    // position: absolute;
+    // top: -9px;
+    // right: 0;
+    // left: 0;
+    // margin-left: auto;
+    // margin-right: auto;
+    // width: 16px;
+    // height: 16px;
+    // background: #fff;
+    // border-left: 1px solid #ddd;
+    // border-top: 1px solid #ddd;
+    // border-top-left-radius: 3px;
+    // transform: rotate(45deg);
+    // z-index: -1;
   }
 }
 .movein-enter-active,
