--- a/ui/src/components/notification.scss
+++ b/ui/src/components/notification.scss
@@ -18,7 +18,7 @@
   margin-right: auto;
   transform: translateY(80vh);
   padding-bottom: 1rem;
-
+  z-index: 1999;
   header {
     font-size: 0.95rem;
     display: flex;
