--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background: rgba(139, 99, 114, 0.1);
+  background: rgba(139, 99, 114, 0.01);
 }
 
 html, body {
@@ -21,7 +21,7 @@ html.wf-loading > * {
   /* padding: 0.25rem; */
   display: grid;
   grid-template-columns: 200px 100px auto;
-  height: 100px;
+  height: 60px;
   margin-bottom: 0px;
   margin-top: auto;
   width: 100%;
@@ -44,12 +44,11 @@ html.wf-loading > * {
 
 .logo {
   color: #edf2f4;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-weight: 700;
   align-self: center;
   justify-self: center;
-  margin-bottom: 0.95rem;
 }
 @media (min-width: 481px) and (max-width: 767px) {
   .logo {
@@ -64,7 +63,7 @@ html.wf-loading > * {
   }
 }
 .footer-info {
-  color: #000;
+  color: #fff;
   justify-self: right;
   align-self: center;
   margin-right: 0.5rem;
@@ -100,6 +99,7 @@ html.wf-loading > * {
   justify-content: center;
   align-self: center;
   justify-self: center;
+  margin-top: 0.5rem;
 }
 @media (min-width: 481px) and (max-width: 767px) {
   .social {
@@ -114,7 +114,7 @@ html.wf-loading > * {
   }
 }
 .social i {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.1rem;
+  height: 1.1rem;
   margin-right: 1rem;
 }
