--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,11 +1,12 @@
 .explorer-container {
   display: grid;
   // grid-template-columns: 30% 70%;
-  grid-column-gap: 1rem;
+  // grid-column-gap: 1rem;
+  column-gap: 2rem;
   align-items: start;
   padding: 1rem;
   @media (min-width: 1281px) {
-    grid-column-gap: 1rem;
+    column-gap: 2rem;
     grid-template-columns: 1fr 6fr;
   }
   @media screen and (min-width: 1400px) {
@@ -91,7 +92,7 @@ header.explorer-header {
     }
     list-style-type: none;
     margin: 0;
-    padding: 0.75rem 0;
+    padding: 1rem 0;
     // border-bottom: 1px solid #8D99AE;
     .header {
       text-transform: capitalize;
