--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -7,10 +7,10 @@
     grid-column-gap: 1rem;
   }
   @media (min-width: 1281px) {
-    grid-template-columns: 450px 400px auto;
+    grid-template-columns: 370px 450px 400px auto;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
-    grid-template-columns: 350px 400px auto;
+    grid-template-columns: 240px 350px 400px auto;
   }
   @media (min-width: 768px) and (max-width: 1024px) {
     // grid-template-columns: 350px 350px auto;
@@ -83,4 +83,77 @@
 
 .account-settings-wrapper {
   justify-self: right;
+}
+
+.app-main-logo {
+  font-size: 1.4rem;
+  justify-self: flex-start;
+  align-self: flex-start;
+  font-weight: 600;
+  text-align: left;
+  color: #fff;
+  padding-left: 34px;
+  position: relative;
+  text-shadow: 0px 1px #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding-bottom: 0.5rem;
+  &:before {
+    content: "B";
+    text-shadow: 0px 1px #000;
+    position: absolute;
+    font-size: 1.35rem;
+    left: 1.1rem;
+    right: 0;
+    height: 35px;
+    width: 35px;
+    z-index: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 3px;
+    color: #fff;
+    background: transparent;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    background: #2B2D42;
+    height: 28px;
+    width: 28px;
+    z-index: -1;
+    left: 0.6rem;
+    border-radius: 3px 3px 3px 8px;
+  }
+  .backdrop {
+    content: "";
+    background: #646675;
+    position: absolute;
+    width: 56px;
+    height: 56px;
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%) rotate(-45deg);
+    z-index: -2;
+    border-radius: 10px;
+    &:after {
+      content: "";
+      background: #8D99AE;
+      position: absolute;
+      width: 55px;
+      height: 32px;
+      right: 0;
+      border-radius: 0px 0px 10px 10px;
+      top: 28px;
+      left: 12px;
+      -webkit-transform: translateY(-50%) rotate(-90deg);
+      transform: translateY(-50%) rotate(-90deg);
+      z-index: -2;
+    }
+  }
 }
