--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -7,10 +7,12 @@
     grid-column-gap: 1rem;
   }
   @media (min-width: 1281px) {
-    grid-template-columns: 900px 450px auto;
+    grid-template-columns: 900px 350px auto;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
     grid-template-columns: 400px 400px auto;
+    border: 1px solid transparent;
+    // border: 1px solid red;
   }
   @media (min-width: 768px) and (max-width: 1024px) {
      grid-template-rows: repeat(3, 60px);
@@ -52,7 +54,7 @@
   grid-template-columns: 80px 100px 130px 150px;
   grid-template-rows: 41px;
   @media (min-width: 1281px) {
-    grid-template-columns: 400px 120px 130px 150px;
+    grid-template-columns: 380px 120px 130px 150px;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
     grid-template-columns: 100px 120px 130 150px;
@@ -140,10 +142,10 @@
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
     background: #2B2D42;
-    height: 28px;
-    width: 28px;
+    height: 32px;
+    width: 32px;
     z-index: -1;
-    left: 0.6rem;
+    left: 1.75rem;
     border-radius: 3px 3px 3px 8px;
   }
   .backdrop {
