--- a/ui/src/components/ContextActions/control.scss
+++ b/ui/src/components/ContextActions/control.scss
@@ -14,6 +14,7 @@
     font-size: 1rem;
     font-weight: normal;
     position: relative;
+    cursor: pointer;
 
     &:hover {
       background: rgba(139, 99, 114, 0.1);
