add dark close icon fixing minor css issue

--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -34,7 +34,7 @@ img {
   justify-content: flex-end;
   margin: 2rem 0 0 0;
 }
-.loader-wrapper {
+.stage3-loader-wrapper {
   margin-right: auto;
   position: relative;
 }
