--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -17,6 +17,7 @@ button {
   }
   &.default {
     padding: 0.5rem 0.5rem;
+    background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
     .label {
       color: #2B2D42;
       font-size: 1rem;
@@ -24,7 +25,6 @@ button {
   }
   &.rounded {
     border-radius: 5px;
-    // box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
     background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
     padding: 0.4rem;
     .label {
