--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -52,7 +52,8 @@ img {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 1.25rem;
+    font-size: 1rem;
+    font-weight: 600;
     border-radius: 4px;
     border: 1px solid #ddd;
     &:hover {
@@ -60,7 +61,7 @@ img {
     }
 
     &.selected {
-      border: 1px solid #2B2D42;
+      border: 1px solid #8D99AE;
       color: #fff;
       background: #8D99AE;
     }
