--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -74,7 +74,7 @@ header.explorer-header {
   position: relative;
   margin: 0;
   // background: #EDF2F4;
-  background: #646675;
+  background: #2b2d42;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   .header-wrapper {
