--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -1,6 +1,6 @@
 button {
   background: #EDF2F4;
-  border: 1px solid rgba(43, 45, 66, 0.1);
+  border: 1px solid rgba(43, 45, 66, 0.2);
   border-radius: 3px;
   font-size: 0.9rem;  
   cursor: pointer;
@@ -24,12 +24,15 @@ button {
     }
   }
   &.rounded {
-    border-radius: 5px;
-    background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
+    border-radius: 20px;
+    // background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
+    background: rgba(237, 242, 244, 0.5);
+    // background: #646675;
+    // border: none;
     padding: 0.4rem;
     .label {
       color: #2B2D42;
-      font-size: 1rem;
+      font-size: 0.9rem;
       font-weight: 500;
     }
   }
