--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,31 +1,24 @@
 .explorer-container {
   display: grid;
-  // grid-template-columns: 30% 70%;
-  // grid-column-gap: 1rem;
   column-gap: 2rem;
   align-items: start;
-  padding: 1rem;
+  padding: 0.2rem 1rem 1rem;
   @media (min-width: 1281px) {
     column-gap: 2rem;
     grid-template-columns: 1fr 6fr;
   }
   @media screen and (min-width: 1400px) {
-    grid-template-columns: 1fr 3fr;
-    // border: 1px solid red;
+    // grid-template-columns: 1fr 3fr;
   }
   @media screen and (min-width: 1600px) {
-    grid-template-columns: 1fr 4fr;
-    // border: 1px solid blue;
+    // grid-template-columns: 1fr 4fr;
   }
   @media screen and (min-width: 1900px) {
-    grid-template-columns: 1fr 6fr;
-    // border: 1px solid green;
+    // grid-template-columns: 1fr 3fr;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
-    grid-column-gap: 1rem;
-    grid-template-columns: 1fr 2fr;
-  }
-  @media (min-width: 768px) and (max-width: 1024px) {
+    // grid-column-gap: 1rem;
+    // grid-template-columns: 1fr 2fr;
   }
   @media only screen and (max-width: 992px) {
     grid-template-columns: 100%;
