--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -14,6 +14,7 @@ button {
   .label {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     margin-bottom: 0 !important;
+    text-transform: capitalize;
   }
   &.default {
     padding: 0.5rem 0.5rem;
@@ -24,15 +25,12 @@ button {
     }
   }
   &.rounded {
-    border-radius: 20px;
-    // background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
+    border-radius: 4px;
     background: rgba(237, 242, 244, 0.5);
-    // background: #646675;
-    // border: none;
     padding: 0.4rem;
     .label {
       color: #2B2D42;
-      font-size: 0.9rem;
+      font-size: 1rem;
       font-weight: 500;
     }
   }
