--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -3,11 +3,12 @@
   padding: 2rem 1rem;
   column-gap: 1rem;
   row-gap: 1rem;
-  @media only screen and (min-width: 1824px) {
-    grid-column-gap: 1rem;
-  }
+  // @media only screen and (min-width: 1824px) {
+  //   grid-column-gap: 1rem;
+  // }
   @media (min-width: 1281px) {
-    grid-template-columns: 600px 350px auto;
+    grid-column-gap: 1rem;
+    grid-template-columns: 450px 350px auto;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
     grid-template-columns: 400px 400px auto;
@@ -54,7 +55,7 @@
   grid-template-columns: 80px 100px 130px 150px;
   grid-template-rows: 41px;
   @media (min-width: 1281px) {
-    grid-template-columns: 100px 105px 120px 140px;
+    grid-template-columns: 110px 135px 145px;
   }
   @media (min-width: 1025px) and (max-width: 1280px) {
     grid-template-columns: 100px 120px 130 150px;
@@ -67,13 +68,8 @@
     grid-template-rows: repeat(3, 40px);
     row-gap: 1rem;
   }
-  // @media only screen and (max-width: 992px) {
-  //   border: 1px solid brown;
-  //   grid-template-columns: 100px 100px 110px auto;
-  // }
   @media (min-width: 768px) and (max-width: 1024px) {
     grid-template-columns: auto 120px 150px 170px;
-    // grid-template-columns: 120px 130px 200px;
   }
 }
 .searchbox-container-desk {
