--- a/ui/src/components/ContextActions/control.scss
+++ b/ui/src/components/ContextActions/control.scss
@@ -5,29 +5,19 @@
   color: #2B2D42;
   
   .ctx-menu-item {
-    padding: 1rem 0;
+    padding: .65rem 0;
     text-align: left;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: .85rem;
     font-weight: normal;
     position: relative;
     cursor: pointer;
 
     &:hover {
-      // background: rgba(139, 99, 114, 0.1);
-      background: rgba(237, 242, 244, 0.5);
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 1px;
-        height: 100%;
-        background: #8b6372;
-      }
+      background: rgba(11, 103, 163, 0.2);
     }
 
     &:first-child {
