--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -52,10 +52,11 @@
   border-radius: 5px;
   width: 100%;
   position: relative;
-  box-shadow: 0 0 10px 1px rgba(100, 102, 117, 0.25);
+  box-shadow: 0 0 4px 1px rgba(100, 102, 117, 0.35);
   .line-item-wrapper {
     &:nth-child(odd) {
-      background: rgba(237, 242, 244, 0.5);
+      // background: rgba(237, 242, 244, 0.5);
+      background: rgba($color: #000, $alpha: .1);
     }
   }
 }
@@ -66,8 +67,8 @@ header.explorer-header {
   width: 100%;
   position: relative;
   margin: 0;
-  // background: #EDF2F4;
-  background: #2b2d42;
+  // background: #2b2d42;
+  background: #0B67A3;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   .header-wrapper {
@@ -85,14 +86,14 @@ header.explorer-header {
     }
     list-style-type: none;
     margin: 0;
-    padding: 1rem 0;
+    padding: .55rem 0;
     // border-bottom: 1px solid #8D99AE;
     .header {
       text-transform: capitalize;
       font-size: 1rem;
-      font-weight: 700;
+      font-weight: 500;
       text-align: left;
-      padding-left: 0.75rem;
+      padding-left: 0rem;
       justify-self: left;
       align-self: center;
       color: #EDF2F4;
