--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -42,7 +42,7 @@
   }
 }
 .create-folder-controls {
-  padding: 5rem 0 0 0;
+  padding: 3rem 0 1rem 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
