--- a/ui/src/components/Folder/delete-folder.scss
+++ b/ui/src/components/Folder/delete-folder.scss
@@ -27,7 +27,8 @@
     }
   }
   .delete-resx-controls {
-    margin-top: 2rem;
+    // margin-top: 2rem;
+    margin: 2rem 0 .5rem 0;
     display: flex;
     width: 100%;
     align-items: center;
