--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -1,8 +1,7 @@
 button {
-  background: #EDF2F4;
-  border: 1px solid rgba(43, 45, 66, 0.2);
+  // background: #EDF2F4;
   border-radius: 3px;
-  font-size: 0.9rem;  
+  font-size: 0.8rem;  
   cursor: pointer;
   outline: none;
   margin: 0 0.25rem;
@@ -10,6 +9,8 @@ button {
   align-items: center;
   justify-content: center;
   position: relative;
+  border: none;
+  // border: 1px solid rgba(255, 194, 114, .8);
   
   .label {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -17,20 +18,27 @@ button {
     text-transform: capitalize;
   }
   &.default {
-    padding: 0.5rem 0.5rem;
-    background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
+    padding: 0.45rem 0.45rem;
+    // background: #FFBC01;
+    
+    border: 1px solid rgba(255, 194, 114, .8);
+    background: rgba(255, 194, 114, .85);
+    // background: radial-gradient(ellipse at center, rgba(237,242,244,1) 0%, rgba(141,153,174,0.2) 100%);
     .label {
+      // color: #2B2D42;
       color: #2B2D42;
-      font-size: 1rem;
+      font-size: .85rem;
     }
   }
   &.rounded {
     border-radius: 4px;
-    background: rgba(237, 242, 244, 0.5);
+    // background: rgba(237, 242, 244, 0.5);
+    background: rgba(11, 103, 163, .85);
     padding: 0.4rem;
     .label {
-      color: #2B2D42;
-      font-size: 1rem;
+      // color: #2B2D42;
+      color: #fff;
+      font-size: .85rem;
       font-weight: 500;
     }
   }
@@ -62,13 +70,17 @@ button {
   }
   &.disabled {
     padding: 0.5rem 0.5rem;
+    // background: #ccc;
+    // border: 1px solid #ccc;
+    // background: rgba(255, 194, 114, .6);
+    // border: 1px solid rgba(255, 194, 114, .6);
     background: #ccc;
     border: 1px solid #ccc;
-    color: rgba(0, 0, 0, 0.5);
     cursor: auto;
     .label {
       color: #fff;
-      font-size: 1rem;
+      // color: #fff;
+      font-size: .85rem;
     }
   }
   &.icon {
@@ -113,6 +125,6 @@ button {
   i {
     width: 1rem;
     height: 1rem;
-    margin-right: 0.4rem;
+    margin-right: 0.3rem;
   }
 }
