--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 0.5rem 0rem;
+  padding: 0.25rem 0rem;
   width: 100%;
 
   label {
@@ -12,12 +12,11 @@
     font-size: 0.9rem;
   }
   input[type="text"] {
-    // border-radius: 3px;
-    border-bottom: 1px solid #8D99AE;
+    border-bottom: 1px solid #FF8E02;
     border-top: none;
     border-left: none;
     border-right: none;
-    padding: 0.5rem 0.4rem;
+    padding: 0.25rem 0.24rem;
     width: 80%;
     outline: none;
     font-size: 1rem;
