--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -6,16 +6,17 @@
   justify-content: center;
 }
 .upload-wrapper {
-  padding: 0.5rem;
-  width: 400px;
+  padding: 0.5rem 0.75rem;
+  width: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   .drop-zone {
     width: 100%;
-    background: #EDF2F4;
-    border: 2px dashed #8D99AE;
+    background: #fff;
+    // border: 2px dashed #8D99AE;
+    border: 2px dashed rgba(255, 170, 65, .65);
     border-radius: 4px;
     position: relative;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -62,10 +63,11 @@
       right: 0;
       margin-left: auto;
       margin-right: auto;
-      background: linear-gradient(45deg, rgba(43, 45, 66, 0.45) 0%, rgba(139, 99, 114, 0.5) 100%);
-      border: 1px solid rgba(141, 153, 174, 0.1);
+      // background: linear-gradient(45deg, rgba(43, 45, 66, 0.45) 0%, rgba(139, 99, 114, 0.5) 100%);
+      background: linear-gradient(45deg,rgba(255, 188, 1, .4) 0%, #3E97D1 100%);
+      // border: 1px solid #8d99ae1a;
       height: 100%;
-      border-radius: 4px;
+      // border-radius: 4px;
       .icon-wrapper {
         width: 2rem;
         height: 2rem;
@@ -130,7 +132,7 @@ img {
   align-items: flex-start;
 }
 .upload-explorer-wrapper {
-  width:100%;
+  width:98%;
   overflow: auto;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -162,11 +164,12 @@ img {
 }
 .clear-upload {
   position: absolute;
-  right: 0.2rem;
-  top: 0.5rem;
+  right: 0.25rem;
+  bottom: 0.25rem;
   button {
-    width: 2rem;
-    height: 2rem;
+    width: 1.65rem;
+    height: 1.65rem;
+    color: #fff;
   }
 }
 .progress-wrap {
@@ -206,7 +209,7 @@ img {
 .upload-explorer-header {
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 600;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 0.9rem;
   width: 100%;
@@ -217,14 +220,16 @@ img {
   font-size: 0.9rem;
   display: block;
   width: 100%;
-  margin: 0.25rem;
+  margin-top: 0.25rem;
   text-align: left;
-  padding-left: 0.5rem;
+  padding-left: 1.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   color: #8D99AE;
 }
 .dropzone-backdrop-icon {
   width: 100%;
-  height: 35%;
+  height: 40%;
   left: 0;
   right: 0;
   margin-left: auto;
